--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^32.0.0",
+    "@ckeditor/ckeditor5-react": "^3.0.3",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@fullcalendar/daygrid": "^5.10.1",
@@ -15,7 +17,9 @@
     "@stripe/stripe-js": "^1.21.2",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "html-react-parser": "^1.4.6",
     "leaflet": "^1.7.1",
+    "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
